--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,9 @@ before_install:
 #  - sudo make install
 #  - cd ..
 
-#  - git clone https://github.com/MyXOF/IoTDB-postback
-#  - cd IoTDB-postback 
-#  - mvn install -DskipTests=true
+  - git clone https://github.com/MyXOF/IoTDB-postback
+  - cd IoTDB-postback 
+  - mvn install -DskipTests=true
 
 script: 
 # only SNAPSHOT version needs to do the following phase
