--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_install:
   - git clone https://github.com/thulab/tsfile.git
   - cd tsfile 
 #  - git checkout hxd_tsfile_sdk
-  - mvn install -DskipTests=true
+  - mvn install -Dmaven.test.skip=true
 
 script: 
 # only SNAPSHOT version needs to do the following phase
