--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,7 @@ before_install:
 #  - git checkout hxd_tsfile_sdk
   - mvn install -Dmaven.test.skip=true
   - cd ..
-  - ls -lh
 
-#script: 
+script: 
 # only SNAPSHOT version needs to do the following phase
-#  - mvn clean test
+  - mvn clean test
