--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
 			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+	      <groupId>org.apache.thrift</groupId>
+	      <artifactId>libthrift</artifactId>
+	      <version>0.10.0</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
