--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,16 @@
 	      <artifactId>libthrift</artifactId>
 	      <version>0.10.0</version>
 		</dependency>
+		<exclusions>
+		     <exclusion> 
+		        <groupId>org.slf4j</groupId>
+		        <artifactId>slf4j-log4j12</artifactId>
+		     </exclusion>
+		     <exclusion> 
+		        <groupId>log4j</groupId>
+		        <artifactId>log4j</artifactId>
+		    </exclusion>
+		  </exclusions> 
 	</dependencies>
 	
 	<build>
